# LINEGO

./: .gitignore  CLAUDE.md  Draft.md  PLAN.md  README.md  environment.yaml  our_methods_draft.md  run.py
artifacts/: best_params_20260601-145546-b29b3236.json  best_params_20260601-150143-6ef231d3.json  selected_20260601-145430-87f67d27.json  selected_20260601-150143-6ef231d3.json
final/: pyproject.toml
final/config/: default.yaml  quick.yaml
final/src/eta_pipeline/: __init__.py  config.py  data.py  feature_search.py  features.py  metrics.py  model.py  plotting.py  report.py  run.py  tuning.py
final/tests/: test_pipeline.py
mix/: compare.py  config.py  evaluate.py  features.py  load_clean.py  run.py  train.py
outputs/: comparison_report.md
outputs/metrics/: all_metrics.json  slice_by_town.csv
outputs/run_mix/metrics/: all_metrics.json  feature_importance_gain.json  permutation_importance.json
outputs/run_src/metrics/: slice_by_town.csv
reports/: run_20260601-145546-b29b3236.json  run_20260601-145546-b29b3236.txt  run_20260601-150143-6ef231d3.json  run_20260601-150143-6ef231d3.txt
src/: config.py  evaluate.py  features.py  load_clean.py  train.py
