[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eta-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20",
    "pandas>=2.0",
    "numpy>=1.26",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "optuna>=3.4",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
geo = ["h3>=3.7"]

[project.scripts]
eta-run = "eta_pipeline.run:main"

[tool.setuptools.packages.find]
where = ["src"]
